--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechnOwl - Desenvolvimento de softwares</title>
+    <title>TechnOwl - Desenvolvimento de Softwares</title>
 </head>
 <body>
     <h1>Hello World!</h1>
+    <button>Explodir</button>
 </body>
 </html>
