--- a/index.html
+++ b/index.html
@@ -1,12 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>TechnOwl - Desenvolvimento de Softwares</title>
+    <link rel="stylesheet" href="css/geral.css">
+    <link rel="stylesheet" href="css/plugins.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
+
 <body>
-    <h1>Hello World!</h1>
-    <button>Explodir</button>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="images/logo.png" alt="logo Topo Tag">
+                </a>
+            </div>
+            <div class="links">
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="">Sobre</a></li>
+                        <li><a href="">Equipe</a></li>
+                        <li><a href="">Contato</a></li>
+                    </ul>
+                </nav>
+                <ul class="social">
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+            <h1><strong>TechnOwl</strong></h1>
+            <h3><strong>Desenvolvimento de Softwares</strong></h3>
+        </div>
+    </header>
+    <main>
+        <section class="sobre">
+            <div class="container">
+                <div class="row">
+                    <h2>TechnOwl</h2>
+                </div>
+                <div class="text-technowl row">
+                    <p><strong>Lorem ipsum dolor sit</strong>, amet consectetur adipisicing elit. Debitis iure laborum ullam, recusandae animi voluptate, qui deserunt sed suscipit iste incidunt dolorum, nesciunt hic. Illo consequuntur eum autem at nostrum.
+                    Sunt perferendis recusandae porro praesentium minus doloribus fugiat, omnis quam quibusdam. Similique quis laborum quisquam voluptates sunt! Necessitatibus aspernatur, doloribus deserunt iure mollitia numquam ab porro, rerum aperiam praesentium vel.
+                    Distinctio, odio quo. Perspiciatis officiis commodi delectus error obcaecati, mollitia molestiae impedit possimus odit veniam repudiandae labore quis dolores recusandae aperiam totam! Accusamus, similique voluptatibus voluptates nemo eum error porro!</p>
+                </div>
+                <div class="items row">
+                    <div class="panel-profissional text-center">
+                        <div class="row box-image-prof">
+                            <img class="photo" src="images/minhafoto.png" alt="Foto Alan Tag">
+                        </div>
+                        <div class="row">
+                            <h3>Alan Limeira</h3>
+                        </div>
+                        <div class="row">
+                            <p>Desenvolvendo em: <strong>
+                                PHP, Java, Javascript, Python, MySQL...
+                            </strong></p>
+                        </div>
+                        <div class="row">
+                            <a class="button mid" href="">Veja mais</a>
+                        </div>
+                    </div>
+                    <div class="panel-profissional text-center">
+                        <div class="row">
+                            <img class="photo" src="images/minhafoto.png" alt="Foto Alan Tag">
+                        </div>
+                        <div class="row">
+                            <h3>Alan Limeira</h3>
+                        </div>
+                        <div class="row">
+                            <p>Desenvolvendo em: <strong>
+                                PHP, Java, Javascript, Python, MySQL...
+                            </strong></p>
+                        </div>
+                        <div class="row">
+                            <a class="button mid" href="">Veja mais</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="container">
+            <div class="logo-footer">
+                <a href="#"><img src="images/logo-footer.png" alt="Logo Footer Tag"></a>
+            </div>
+            <div class="social-medias">
+                <a href=""><img src="images/005-whatsapp.png" alt="Whatsapp Footer Tag"></a>
+                <a href=""><img src="images/027-linkedin.png" alt="Linkedin Footer Tag"></a>
+                <a href=""><img src="images/029-instagram.png" alt="Instagram Footer Tag"></a>
+                <a href=""><img src="images/gmail.svg" alt="Gmail Footer Tag"></a>   
+            </div>
+            <div class="copy-right">
+                <p>2020, Todos os direitos reservados</p>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
