--- a/index.html
+++ b/index.html
@@ -14,20 +14,33 @@
 <body>
     <header>
         <div class="container">
-            <nav class="navbar navbar-fixed-top">
-                <div class="logo">
-                    <a href="index.html">
-                        <img src="images/logo.png" alt="logo Topo Tag">
-                    </a>
+            <nav class="navbar navbar-default navbar-fixed-top">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="logo" href="index.html">
+                            <img src="images/logo.png" alt="logo Topo Tag">
+                        </a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav text-center">
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="">Sobre</a></li>
+                            <li><a href="">Equipe</a></li>
+                            <li><a href="">Contato</a></li>
+                        </ul>
+                        <ul class="links-git-face">
+                            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="">Sobre</a></li>
-                    <li><a href="">Equipe</a></li>
-                    <li><a href="">Contato</a></li>
-                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
-                </ul>
             </nav>
             <h1><strong>TechnOwl</strong></h1>
             <h3><strong>Desenvolvimento de Softwares</strong></h3>
@@ -105,15 +118,35 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.js"
         integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>
+    <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
     <script>
         const navbar = document.querySelector('.navbar-fixed-top');
         window.onscroll = () => {
+            $('.navbar-toggle').attr('aria-expanded', 'false')
             if (window.scrollY > navbar.clientHeight) {
-                navbar.classList.add('scrolled');
+                navbar.classList.add('dark-bg');
             } else {
-                navbar.classList.remove('scrolled');
+                if ($('.navbar-toggle').attr('aria-expanded') === "true"){
+                    alert('abri')
+                }else{
+                    navbar.classList.remove('dark-bg');
+                }
             }
         };
+        $(".navbar-toggle").click(
+            function () {
+                if ($('.navbar-toggle').attr('aria-expanded') === "true") {
+                    if (window.scrollY > navbar.clientHeight) {
+                        navbar.classList.add('dark-bg');
+                        
+                    }else{
+                        navbar.classList.remove('dark-bg');
+                    }
+                } else {
+                    navbar.classList.add('dark-bg');
+                }
+            }
+        );
     </script>
 </body>
 
