--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/geral.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="bower_components/wow/css/libs/animate.css">
+    <link rel="stylesheet" href="node_modules/animate.css/animate.min.css">
     <link rel="stylesheet" href="css/plugins.css">
 </head>
 
@@ -25,7 +26,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="logo wow slideInLeft" data-wow-duration="1s" data-wow-delay="0s" href="index.html">
+                        <a class="logo" href="index.html">
                             <img src="images/logo.png" alt="logo Topo Tag">
                         </a>
                     </div>
@@ -39,8 +40,8 @@
                     </div>
                 </div>
             </nav>
-            <h1><strong>TechnOwl</strong></h1>
-            <h3><strong>Desenvolvimento de Softwares</strong></h3>
+            <h1 class="wow slideInLeft" data-wow-duration="1s" data-wow-delay="0s"><strong>TechnOwl</strong></h1>
+            <h3 class="wow slideInLeft" data-wow-duration="1s" data-wow-delay="0.5s"><strong>Desenvolvimento de Softwares</strong></h3>
         </div>
     </header>
     <main>
@@ -63,10 +64,10 @@
                 <div class="items row">
                     <div class="panel-profissional text-center">
                         <div class="row box-image-prof">
-                            <img class="photo wow pulse" data-wow-duration="1.5s" data-wow-delay="0s"
+                            <img class="photo" data-wow-duration="1.5s" data-wow-delay="0s"
                                 src="images/minhafoto.png" alt="Foto Alan Tag">
                         </div>
-                        <div class="row">
+                        <div class="row wow flipInY">
                             <h3>Alan Limeira</h3>
                         </div>
                         <div class="row">
@@ -80,10 +81,10 @@
                     </div>
                     <div class="panel-profissional text-center">
                         <div class="row">
-                            <img class="photo wow pulse" data-wow-duration="1.5s" data-wow-delay="0s"
+                            <img class="photo" data-wow-duration="1.5s" data-wow-delay="0s"
                                 src="images/minhafoto.png" alt="Foto Alan Tag">
                         </div>
-                        <div class="row">
+                        <div class="row wow flipInY">
                             <h3>Alan Limeira</h3>
                         </div>
                         <div class="row">
@@ -101,14 +102,14 @@
     </main>
     <footer>
         <div class="container">
-            <div class="logo-footer wow flip" data-wow-duration="1.5s" data-wow-delay="0s">
+            <div class="logo-footer" data-wow-duration="1.5s" data-wow-delay="0s">
                 <a href="#"><img src="images/logo-footer.png" alt="Logo Footer Tag"></a>
             </div>
             <div class="social-medias">
-                <a href=""><img src="images/005-whatsapp.png" alt="Whatsapp Footer Tag"></a>
-                <a href=""><img src="images/027-linkedin.png" alt="Linkedin Footer Tag"></a>
-                <a href=""><img src="images/029-instagram.png" alt="Instagram Footer Tag"></a>
-                <a href=""><img src="images/gmail.svg" alt="Gmail Footer Tag"></a>
+                <a href="" class="wow flipInY" data-wow-duration="1s" data-wow-delay="1.5s"><img src="images/005-whatsapp.png" alt="Whatsapp Footer Tag"></a>
+                <a href="" class="wow flipInY" data-wow-duration="1s" data-wow-delay="1s"><img src="images/027-linkedin.png" alt="Linkedin Footer Tag"></a>
+                <a href="" class="wow flipInY" data-wow-duration="1s" data-wow-delay="0.5s"><img src="images/029-instagram.png" alt="Instagram Footer Tag"></a>
+                <a href="" class="wow flipInY" data-wow-duration="1s" data-wow-delay="0s"><img src="images/gmail.svg" alt="Gmail Footer Tag"></a>
             </div>
             <div class="copy-right">
                 <p>2020, Todos os direitos reservados</p>
